syntax="proto3";

option go_package="./pb";

import "processor_message.proto";
import "memory_message.proto";
import "storage_message.proto";
import "screen_message.proto";
import "keyboards_message.proto";
import "google/protobuf/timestamp.proto";

//笔记本
message Laptop{
    string id=1;
    string brand=2;
    string name=3;
    CPU cpu=4;
    Memory ram=5;
    repeated GPU gpus=6;
    repeated Storage storages=7;
    Screen screen=8;
    Keyborad keyborad=9;
    oneof weight {
      double weight_kg=10;//千克
      double weight_lb=11;//磅
    }
    double price_used=12;
    uint32 release_year=13;
    google.protobuf.Timestamp update_at=14;
}