syntax="proto3";

option go_package=".;pb";

//屏幕
message Screen {
    //分辨率
    message Resolution {
      uint32 width = 1;
      uint32 height = 2;
    }
    //屏幕材质
    enum Panel{
       UNKNOWN = 0;
       IPS = 1;
       OLED = 2;
    }

    //屏幕尺寸
    float size_inch = 1;
    Resolution resolution = 2;
    Panel panel = 3;
    //是否多点触控
    bool multitouch = 4;

}